End of Section 11

--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -10,5 +10,10 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings": {
+    "CloudName": "dpjxzmhq7",
+    "ApiKey": "835789619222355",
+    "ApiSecret": "V0LdvJqBlFLNILJT2T8UQ5cjaC8"
+  }
 }
